--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="models/status-bar.class.js"></script>
   <script src="models/health-bar.class.js"></script>
   <script src="models/coin-bar.class.js"></script>
+  <script src="models/enboss-bar.class.js"></script>
   <script src="models/bottle-bar.class.js"></script>
   <script src="models/background-object.class.js"></script>
   <script src="models/keyboard.class.js"></script>
