enboss animation fixed and background sound added

--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
 
   <h1> EL POLLO LOCO</h1>
 
-  <canvas width="720" height="480" id="canvas">
+  <div id="gameContent">
+    <div class="startScreen" id="startScreen" style="display: none;">
+      <img src="img/9_intro_outro_screens/start/startscreen_2.png">
+    </div>
 
-  </canvas>
+    <canvas width="720" height="480" id="canvas"></canvas>
+  </div>
 
   <span>
     <h3>"<-" MOVE LEFT</h3>
-    <h3> MOVE RIGHT "->"</h3>
+        <h3> MOVE RIGHT "->"</h3>
   </span>
   <span>
     <h3>"SPACE" = JUMP</h3>
