--- a/index.html
+++ b/index.html
@@ -31,26 +31,24 @@
   <link rel="icon" type="image/png" href="img/6_salsa_bottle/salsa_bottle.png">
 </head>
 
-<body onload="init()">
+<body>
 
   <h1> EL POLLO LOCO</h1>
 
   <div id="gameContent">
-    <div class="startScreen" id="startScreen" style="display: none;">
-      <img src="img/9_intro_outro_screens/start/startscreen_2.png">
+    <div class="startScreen" id="startScreen">
+      <img id="startScreenImage" src="img/9_intro_outro_screens/start/startscreen_2.png">
+      <button id="startGameButton" onclick="startGame()">Start Game</button>
     </div>
 
     <canvas width="720" height="480" id="canvas"></canvas>
+    <button id="muteButton" onclick="muteGame()">
+      <img id="muteIcon" src="img/design_icons/mute.png">
+    </button>
+    <button id="fullScreenButton">
+      <img id="fullScreenIcon" src="img/design_icons/fullscreen.png">
+    </button>
   </div>
-
-  <span>
-    <h3>"<-" MOVE LEFT</h3>
-        <h3> MOVE RIGHT "->"</h3>
-  </span>
-  <span>
-    <h3>"SPACE" = JUMP</h3>
-    <h3>"D" = THROW</h3>
-  </span>
 </body>
 
 </html>
