--- a/index.html
+++ b/index.html
@@ -26,28 +26,35 @@
   <script src="models/throwable-object.class.js"></script>
   <script src="models/endboss.class.js"></script>
   <script src="levels/level1.js"></script>
+  <script src="js/sounds.js"></script>
   <script src="js/game.js"></script>
   <title>El pollo loco</title>
   <link rel="icon" type="image/png" href="img/6_salsa_bottle/salsa_bottle.png">
 </head>
 
-<body>
-
-  <h1> EL POLLO LOCO</h1>
-
-  <div id="gameContent">
+<body id="fullBody">
+  <div id="gameScreen">
+    <div class="options">
+        <button id="muteButton" onclick="toggleMute('click')">
+          <img id="muteIcon" src="img/design_icons/mute.png">
+          <span>Mute / Unmute</span>
+        </button>
+        <button id="fullScreenButton" onclick="toggleFullScreen()">
+          <img id="fullScreenIcon" src="img/design_icons/fullscreen.png">
+          <span>Fullscreen</span>
+        </button>
+    </div>
     <div class="startScreen" id="startScreen">
       <img id="startScreenImage" src="img/9_intro_outro_screens/start/startscreen_2.png">
       <button id="startGameButton" onclick="startGame()">Start Game</button>
     </div>
-
     <canvas width="720" height="480" id="canvas"></canvas>
-    <button id="muteButton" onclick="muteGame()">
-      <img id="muteIcon" src="img/design_icons/mute.png">
-    </button>
-    <button id="fullScreenButton">
-      <img id="fullScreenIcon" src="img/design_icons/fullscreen.png">
-    </button>
+    <div class="keyInfo">
+        <span>"<" Left</span>
+        <span>">" Right</span>
+        <span>"SPACE" Jump</span>
+        <span>"D" THROW BOTTLE</span>
+    </div>
   </div>
 </body>
 
