--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     </div>
     <canvas width="720" height="480" id="canvas"></canvas>
     <div class="keyInfo">
-        <span>"<" Left</span>
-        <span>">" Right</span>
-        <span>"SPACE" Jump</span>
-        <span>"D" THROW BOTTLE</span>
+        <span>"<" = LEFT</span>
+        <span>">" = RIGHT</span>
+        <span>"SPACE" = JUMP</span>
+        <span>"D" = THROW BOTTLE</span>
     </div>
   </div>
 </body>
