added back to menu button, added rotate your phone picture, added js doc comments

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </div>
     <div class="endScreen" id="endScreen">
       <img id="endScreenImage" src="img/9_intro_outro_screens/game_over/game over.png">
+      <button id="restartGame" onclick="backToMenu()">Back to Menu</button>
     </div>
     <canvas width="720" height="480" id="canvas"></canvas>
     <div class="keyInfo">
@@ -68,6 +69,10 @@
         <img id="btnThrow" src="img/design_icons/mobile_bottle.png">
       </div>
     </div>
+  </div>
+  <div class="rotatePhone">
+    <span>PLEASE ROTATE YOUR PHONE</span>
+    <img src="img/design_icons/rotate.svg">
   </div>
 </body>
 
