--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div id="gameScreen">
     <div class="options">
       <button id="muteButton" onclick="toggleMute('click')">
-        <img id="muteIcon" src="img/design_icons/mute.png">
+        <img id="muteIcon" src="img/design_icons/unmute.png">
         <span>Mute / Unmute</span>
       </button>
       <button id="fullScreenButton" onclick="toggleFullScreen()">
